<resources>
    <string name="app_name">Movie Picks</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- themoviedb.org image size -->
    <!-- Backdrop Image Size -->
    <string name="image_backdrop_w300">w300</string>
    <string name="image_backdrop_w780">w780</string>
    <string name="image_backdrop_w1280">w1280</string>
    <string name="image_backdrop_original">original</string>
    <!-- Poster Image Size -->
    <string name="image_poster_w92">w92</string>
    <string name="image_poster_w154">w154</string>
    <string name="image_poster_w185">w185</string>
    <string name="image_poster_w342">w342</string>
    <string name="image_poster_w500">w500</string>
    <string name="image_poster_w780">w780</string>
    <string name="image_poster_original">original</string>

    <!-- Menu Item Strings -->
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_test">Test</string>

    <!-- Preference Sort Order Strings -->
    <string name="pref_sortorder_key">sortorder_key</string>
    <string name="pref_sortorder_label">Sort Order</string>
    <string name="pref_sort_label_popular">Popularity</string>
    <string name="pref_sort_label_rating">Rating</string>
    <string name="pref_sort_value_popular">1</string>
    <string name="pref_sort_value_rating">2</string>

    <!-- MainActivityFragment String Resources -->
    <string name="search_edittext_hint">Find Movie</string>
    <string name="title_activity_detail">DetailActivity</string>

    <!-- Empty ListView -->
    <string name="empty_listview">No Movie Information Available</string>
    <string name="empty_listview_network">No Movie Information Available.  No network connection detected.</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">android.anhvannguyen.me</string>
    <string name="content_authority">me.anhvannguyen.android.moviepicks</string>

    <!-- Detail View String -->
    <string name="detail_label">Movie Detail</string>
    <string name="detail_score_label">Score:</string>
    <string name="detail_count_label">Vote Count:</string>
    <string name="detail_release_label">Release Date:</string>
    <string name="detail_status_label">Status:</string>
    <string name="detail_runtime_label">Runtime:</string>

    <!-- Detail String format -->
    <string name="detail_score_format">%1$.1f/10</string>
    <string name="detail_runtime_format">%1$d Minutes</string>

    <!-- List String format -->
    <string name="list_rating_format">Rating: %1$.1f (%2$d)</string>

</resources>
