<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="0dp"
    card_view:cardElevation="4dp"
    card_view:cardUseCompatPadding="true">

    <android.support.v7.widget.GridLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:columnCount="2">

        <TextView
            android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
            android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
            android:text="@string/detail_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_columnSpan="2"
            app:layout_gravity="center_horizontal"/>

        <TextView
            android:paddingBottom="@dimen/abc_action_bar_default_padding_material"
            android:paddingTop="@dimen/abc_action_bar_default_padding_material"
            android:text="@string/detail_score_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_columnWeight="1"/>

        <TextView
            android:id="@+id/detail_vote_average_textview"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_gravity="end"/>

        <TextView
            android:paddingBottom="@dimen/abc_action_bar_default_padding_material"
            android:paddingTop="@dimen/abc_action_bar_default_padding_material"
            android:text="@string/detail_count_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_columnWeight="1"/>

        <TextView
            android:id="@+id/detail_vote_count_textview"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_gravity="end"/>

        <TextView
            android:paddingBottom="@dimen/abc_action_bar_default_padding_material"
            android:paddingTop="@dimen/abc_action_bar_default_padding_material"
            android:text="@string/detail_release_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_columnWeight="1"/>

        <TextView
            android:id="@+id/detail_release_date_textview"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_gravity="end"/>

        <TextView
            android:paddingBottom="@dimen/abc_action_bar_default_padding_material"
            android:paddingTop="@dimen/abc_action_bar_default_padding_material"
            android:text="@string/detail_status_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_columnWeight="1"/>

        <TextView
            android:id="@+id/detail_status_textview"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_gravity="end"/>

        <TextView
            android:paddingBottom="@dimen/abc_action_bar_default_padding_material"
            android:paddingTop="@dimen/abc_action_bar_default_padding_material"
            android:text="@string/detail_runtime_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_columnWeight="1"/>

        <TextView
            android:id="@+id/detail_runtime_textview"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_gravity="end"/>


    </android.support.v7.widget.GridLayout>
</android.support.v7.widget.CardView>